--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,6 +1,7 @@
-<section class="cta-section">
-  <div class="container">
-    <div class="cta-body bento-grid">
+<section class="cta-section image-container">
+  <img src="/assets/images/placeholder.jpg" alt="Rize Digital" />
+  <div class="container ">
+    <div class="cta-body bento-grid imag-container">
       <div class="cta-text">
         <h2>{{ include.title }}</h2>
         <p>{{ include.text }}</p>
