--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -74,6 +74,7 @@ a.button-secondary {
 	display: flex;
 	flex-direction: column;
 	gap: $spacing-md;
+	padding: $spacing-md 0;
 
 	@container (min-width: #{$container-lg}) {
 		flex-direction: row;
