adds social media component - rough

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,7 @@
 <footer>
   <div class="footer-container">
     <div class="social-media">
-      <a href="https://www.linkedin.com/company/connectdigital" target="_blank">LinkedIn</a>
-      <a href="https://www.facebook.com/connectDigital" target="_blank">Facebook</a>
-      <a href="https://www.instagram.com/connectdigital" target="_blank">Instagram</a>
-      <a href="https://www.youtube.com/c/connectDigital" target="_blank">YouTube</a>
+      {% include social-links.html class="footer-social" %}
     </div>
     <div class="subfooter">
       <span class="text-center">
@@ -15,8 +12,5 @@
         <a href="{{ site.url }}/terms-of-service.html">Terms of Service</a>
       </p>
     </div>
-    <!-- <div class="back-to-top">
-      <a href="#top">Back to Top</a>
-    </div> -->
   </div>
 </footer>
