--- a/_sass/components/_cta.scss
+++ b/_sass/components/_cta.scss
@@ -12,6 +12,7 @@
 	.cta-body {
 		background-color: $color-primary;
 		border-radius: $border-radius-lg;
+		box-shadow: $drop-shadow;
 		padding: $spacing-xl;
 		width: fit-content;
 
