--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,5 +15,6 @@
 @use 'components/_hero';
 @use 'components/_feature';
 @use 'components/_cta';
+@use 'components/_social';
 // @use 'components/_faq';
 // @use 'components/_map';
