--- a/_sass/global/_media.scss
+++ b/_sass/global/_media.scss
@@ -21,6 +21,14 @@ main img {
 	}
 }
 
+.icon {
+	width: 24px;
+	height: 24px;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
 .circle {
 	width: 100;
 	height: auto;
