--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,5 +1,5 @@
 <section class="cta-section image-container">
-  <img src="/assets/images/placeholder.jpg" alt="Rize Digital" />
+  <img src="/assets/images/placeholder.jpg" alt="Rize Digital" aria-hidden="true" />
   <div class="container ">
     <div class="cta-body bento-grid imag-container">
       <div class="cta-text">
