--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -23,7 +23,9 @@ Feature component for bento grid
       {{ include.description }}
     </p>
     {% if include.button_text and include.button_url %}
-    <a href="{{ include.button_url }}" class="button">{{ include.button_text }}</a>
+    <div class="button-wrapper">
+      <a href="{{ include.button_url }}" class="button">{{ include.button_text }}</a>
+    </div>
     {% endif %}
   </div>
 </div>
