--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -95,4 +95,5 @@ $transition: 0.3s ease-in-out;
 $border-radius-sm: 0.25%;
 $border-radius: 12px;
 $border-radius-lg: 30px;
+$border-radius-xl: 60px;
 $border-radius-full: 100%;
