--- a/_sass/global/_color.scss
+++ b/_sass/global/_color.scss
@@ -4,6 +4,10 @@
 	background-color: $color-primary;
 }
 
+.bg-green {
+	background-color: $color-secondary;
+}
+
 .bg-light {
 	background-color: $color-white;
 	color: $color-black;
