--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -36,7 +36,7 @@ main {
 .container-full-width {
 	display: flex;
 	flex-flow: column;
-	padding: $spacing-xxl $spacing-md;
+	padding: $spacing-xxl 0;
 
 	> div {
 		flex: 1 1 50%;
