a lot of mobile styles

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,8 +1,8 @@
 <section class="cta-section image-container">
   <img src="/assets/images/placeholder.jpg" alt="Rize Digital" aria-hidden="true" />
   <div class="container ">
-    <div class="cta-body bento-grid imag-container">
-      <div class="cta-text">
+    <div class="cta-body bento-grid">
+      <div class="heading-container">
         <h2>{{ include.title }}</h2>
         <p>{{ include.text }}</p>
         <div class="button-container">
