--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -23,7 +23,7 @@ Feature component for bento grid
       {{ include.description }}
     </p>
     {% if include.button_text and include.button_url %}
-    <div class="button-wrapper">
+    <div class="button-container">
       <a href="{{ include.button_url }}" class="button">{{ include.button_text }}</a>
     </div>
     {% endif %}
