--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -6,28 +6,29 @@ a.button,
 	color: $color-white;
 	display: flex;
 	font-family: $font-family-display;
-	font-size: $font-size-md;
 	font-weight: $font-weight-bold;
 	letter-spacing: $letter-spacing-tight;
-	line-height: $line-height-xl;
+	line-height: $line-height-md;
 	justify-content: center;
 	text-align: center;
 	border-radius: $border-radius-lg;
 	border: 2px solid $color-white;
-	padding: $spacing-sm $spacing-xl;
+	padding: $spacing-sm $spacing-md;
 	text-transform: uppercase;
 	transition: all $transition;
 	cursor: pointer;
+
+	@container (min-width: #{$container-lg}) {
+		align-self: flex-start;
+		font-size: $font-size-md;
+		padding: $spacing-sm $spacing-xl;
+	}
 
 	&:hover {
 		background-color: $color-white;
 		border-color: $color-white;
 		color: $color-black;
 		text-decoration: none;
-	}
-
-	@container (min-width: #{$container-lg}) {
-		align-self: flex-start;
 	}
 
 	&.button-alt {
@@ -70,11 +71,10 @@ a.button-secondary {
 	}
 }
 
-.button-wrapper {
+.button-container {
 	display: flex;
 	flex-direction: column;
-	gap: $spacing-md;
-	padding: $spacing-base 0;
+	padding: $spacing-md 0 0;
 
 	@container (min-width: #{$container-lg}) {
 		flex-direction: row;
