--- a/_sass/components/_cta.scss
+++ b/_sass/components/_cta.scss
@@ -3,53 +3,43 @@
 .cta-section {
 	background-color: $color-black;
 	color: $color-white;
-	padding: $spacing-xl $spacing-lg;
 	text-align: center;
 	display: grid;
 	align-items: center;
 	justify-content: center;
 
+	@container (min-width: #{$container-lg}) {
+		padding: $spacing-xl $spacing-lg;
+	}
+
 	.cta-body {
 		background-color: $color-primary;
 		border-radius: $border-radius-lg;
 		box-shadow: $drop-shadow;
-		padding: $spacing-xl;
+		padding: $spacing-md;
 		width: fit-content;
 
 		@container (min-width: #{$container-lg}) {
 			max-width: 960px;
-			padding: $spacing-xxl $spacing-xxxl;
+			padding: $spacing-xl;
 		}
 
 		h2 {
+			font-size: $font-size-lg;
+
 			@container (min-width: #{$container-lg}) {
 				font-size: $font-size-xxxl;
 				line-height: $line-height-sm;
 			}
 		}
 
+		p {
+			font-size: $font-size-body;
+			line-height: $line-height-md;
+		}
+
 		.button {
 			display: inline-block;
-		}
-
-		.cta-image {
-			flex: 1 0 auto;
-			padding: $spacing-lg;
-		}
-
-		.cta-text {
-			display: flex;
-			flex-flow: column;
-			align-items: center;
-			gap: $spacing-lg;
-
-			p {
-				@container (min-width: #{$container-lg}) {
-					// max-width: 90%;
-					font-size: $font-size-md;
-					padding: 0 $spacing-xl;
-				}
-			}
 		}
 	}
 }
@@ -81,11 +71,5 @@
 	p {
 		font-family: $font-family-serif;
 		font-style: italic;
-	}
-
-	.button-container {
-		.button {
-			justify-self: center;
-		}
 	}
 }
