--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -28,11 +28,11 @@ $font-family-sans-serif: 'Inter', 'Open Sans', 'Arial', sans-serif;
 $font-family-serif: 'Lora', 'Georgia', serif;
 
 // Font size variables
-$font-size-jumbo: 4.75rem; // 60px, h1
+$font-size-jumbo: 4.25rem; // 60px, h1
 $font-size-xxxl: 3.75rem;
 $font-size-xxl: 3.25rem; // 40px, h3
-$font-size-xl: 2rem; // 32px, between h2 and h3
-$font-size-lg: 1.625rem; // 26px, h3
+$font-size-xl: 2.35rem; // 32px, between h2 and h3
+$font-size-lg: 1.725rem; // 26px, h3
 $font-size-md: 1.225rem; // 22px, nav links
 $font-size-body: 1.125rem; // 18px, Body text (paragraphs)
 $font-size-sm: 1rem; // 16px, Small (buttons)
@@ -42,8 +42,8 @@ $font-size-xs: 0.875rem; // 14px, Extra extra small (copyright)
 $line-height-xl: 1.8;
 $line-height-lg: 1.36; // For body text and paragraphs
 $line-height-md: 1.3; // For UI elements, buttons, small text
-$line-height-sm: 1.2; // For headings (h2, h3)
-$line-height-xs: 1.1; // For jumbo/h1 text (display typography)
+$line-height-sm: 1.1; // For headings (h2, h3)
+$line-height-xs: 1; // For jumbo/h1 text (display typography)
 
 // Font weight
 $font-weight-light: 300;
@@ -81,7 +81,7 @@ $container-padding-sm: $spacing-md; // Smaller screens
 $container-padding-lg: $spacing-xl; // Larger screens
 
 // Header heights
-$header-height: 5rem; // 80px Mobile header height
+$header-height: 4rem; // 80px Mobile header height
 $header-height-lg: 5.75rem; // 92px Desktop header height
 
 // Effects
@@ -97,3 +97,7 @@ $border-radius: 12px;
 $border-radius-lg: 30px;
 $border-radius-xl: 60px;
 $border-radius-full: 100%;
+
+// Icons
+$icon-size-sm: 32px;
+$icon-size: 60px;
