--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -25,7 +25,12 @@ footer {
 		> div {
 			display: flex;
 			gap: $spacing-md;
-			// width: 100%;
+			flex-flow: column;
+			text-align: center;
+		}
+
+		@container (min-width: #{$container-lg}) {
+			flex-flow: row;
 		}
 
 		.footer-logo {
@@ -71,33 +76,6 @@ footer {
 
 		.subfooter {
 			font-size: $font-size-xs;
-			// display: flex;
-			// flex-flow: row;
-			// justify-content: space-between;
 		}
-	}
-}
-
-.back-to-top {
-	// @extend %button;
-	// @extend %button--primary;
-	// @extend %button--icon;
-
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
-	z-index: 1000;
-	flex: 0 0 auto;
-	width: 50px;
-	height: 50px;
-
-	&:hover {
-		background-color: $color-secondary;
-	}
-}
-
-@media (prefers-reduced-motion: reduce) {
-	.back-to-top {
-		transition: none;
 	}
 }
