adds more mobile styles, including hero title overlay style

--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -17,6 +17,7 @@ a.button,
 	text-transform: uppercase;
 	transition: all $transition;
 	cursor: pointer;
+	justify-self: center;
 
 	@container (min-width: #{$container-lg}) {
 		align-self: flex-start;
