--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -3,12 +3,13 @@
 .hero {
 	.hero-container {
 		align-items: center;
-		background-color: $color-black;
+		background-color: $color-primary;
 		color: $color-white;
 		display: grid;
 		grid-template-columns: 1fr;
 		max-width: 100%;
 		padding: 0;
+		position: relative;
 
 		@container (min-width: #{$breakpoint-lg}) {
 			min-height: 80vh;
@@ -16,22 +17,34 @@
 		}
 
 		.text-container {
-			order: -1;
-			padding: $spacing-xl;
+			position: relative;
+			z-index: 2;
+			margin-top: -10vh;
+			margin-left: $spacing-sm;
+			margin-right: $spacing-sm;
+			background-color: $color-black;
+			box-shadow: $drop-shadow;
+			padding: $spacing-xl $spacing-lg;
+			border-radius: $border-radius-lg;
+			text-align: center;
 
 			@container (min-width: #{$breakpoint-lg}) {
+				margin: 0;
 				padding: $spacing-xxxl $spacing-xxl;
+				border-radius: 0;
 			}
 		}
 
 		.image-container {
-			height: 100%;
-			order: 1;
+			height: 50vh;
+			order: -1;
+			position: relative;
+			z-index: 1;
 
 			img {
+				width: 100%;
 				height: 100%;
 				object-fit: cover;
-				filter: grayscale(100%);
 			}
 		}
 	}
