--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer>
   <div class="footer-container">
-    <div class="social-media">
-      {% include social-links.html class="footer-social" %}
+    <div>
+      <div class="social-media">
+        {% include social-links.html class="footer-social" %}
+      </div>
     </div>
     <div class="subfooter">
       <span class="text-center">
