--- a/_sass/global/_color.scss
+++ b/_sass/global/_color.scss
@@ -8,6 +8,11 @@
 	background-color: $color-secondary;
 }
 
+.bg-dark {
+	background-color: $color-black;
+	color: $color-white;
+}
+
 .bg-light {
 	background-color: $color-white;
 	color: $color-black;
