--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -12,26 +12,28 @@
 		position: relative;
 
 		@container (min-width: #{$breakpoint-lg}) {
+		background-color: $color-black;
 			min-height: 80vh;
 			grid-template-columns: 2fr 2fr;
 		}
 
 		.text-container {
+			background-color: $color-black;
+			box-shadow: $drop-shadow;
+			border-radius: $border-radius-lg;
 			position: relative;
-			z-index: 2;
 			margin-top: -10vh;
 			margin-left: $spacing-sm;
 			margin-right: $spacing-sm;
-			background-color: $color-black;
-			box-shadow: $drop-shadow;
 			padding: $spacing-xl $spacing-lg;
-			border-radius: $border-radius-lg;
 			text-align: center;
+			z-index: 2;
 
 			@container (min-width: #{$breakpoint-lg}) {
+				border-radius: 0;
 				margin: 0;
 				padding: $spacing-xxxl $spacing-xxl;
-				border-radius: 0;
+				text-align: left;
 			}
 		}
 
@@ -40,6 +42,11 @@
 			order: -1;
 			position: relative;
 			z-index: 1;
+
+			@container (min-width: #{$breakpoint-lg}) {
+				height: 100%;
+				order: 1;
+			}
 
 			img {
 				width: 100%;
