--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,13 +1,15 @@
-<section class="cta-section image-container">
-  <img src="/assets/images/placeholder.jpg" alt="Rize Digital" aria-hidden="true" />
-  <div class="container ">
-    <div class="cta-body bento-grid">
-      <div class="heading-container">
-        <h2>{{ include.title }}</h2>
-        <p>{{ include.text }}</p>
-        <div class="button-container">
-          <a href="{{ include.link }}" class="button">{{ include.button_text }}</a>
-        </div>
+<section class="cta-section">
+
+  <div class="cta-body bento-grid">
+    <div class="heading-container">
+      <h2>{{ include.title }}</h2>
+      <p>{{ include.text }}</p>
+      <div class="button-container">
+        <a href="{{ include.link }}" class="button">{{ include.button_text }}</a>
       </div>
     </div>
+  </div>
+  <div class="image-container">
+    <img src="/assets/images/placeholder.jpg" alt="Rize Digital" aria-hidden="true" />
+  </div>
 </section>
