adds cta image and styles

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,5 +1,4 @@
 <section class="cta-section">
-
   <div class="cta-body bento-grid">
     <div class="heading-container">
       <h2>{{ include.title }}</h2>
@@ -10,6 +9,9 @@
     </div>
   </div>
   <div class="image-container">
-    <img src="/assets/images/placeholder.jpg" alt="Rize Digital" aria-hidden="true" />
+    <video autoplay muted playsinline loop preload="auto">
+      <source src="/assets/videos/connect1.mp4" type="video/mp4">
+    </video>
+    <!-- <img src="/assets/images/placeholder.jpg" alt="Rize Digital" aria-hidden="true" /> -->
   </div>
 </section>
