--- a/_sass/global/_forms.scss
+++ b/_sass/global/_forms.scss
@@ -11,7 +11,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: $spacing-md;
-		max-width: 960px;
+		max-width: $container-lg;
 		margin: 0 auto;
 		padding: 0;
 
