--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -47,10 +47,13 @@ main {
 	}
 
 	h4 {
-		font-weight: $font-weight-regular;
-		font-size: $font-size-body;
+		font-family: $font-family-display;
+		font-weight: $font-weight-black;
+		font-size: $font-size-lg;
 		line-height: $line-height-sm;
-		letter-spacing: $letter-spacing-none;
+		letter-spacing: $letter-spacing-tight;
+		text-transform: uppercase;
+		padding: $spacing-lg 0;
 	}
 
 	p {
@@ -73,9 +76,31 @@ main {
 	}
 
 	ul {
+		display: flex;
+		flex-flow: column;
+		gap: $spacing-md;
 		list-style: none;
 		padding: 0;
 		margin: 0;
+
+		@container (min-width: #{$container-lg}) {
+			max-width: $container-lg;
+		}
+
+		li {
+			border: 2px solid;
+			border-radius: $border-radius-xl;
+			display: flex;
+			font-size: $font-size-body;
+			letter-spacing: $letter-spacing-tight;
+			line-height: $line-height-md;
+			padding: $spacing-sm $spacing-md;
+			// text-transform: uppercase;
+			font-weight: $font-weight-black;
+			// justify-content: center;
+			align-items: center;
+			// text-align: center;
+		}
 	}
 
 	li {
@@ -144,7 +169,7 @@ main {
 	@container (min-width: #{$container-lg}) {
 		align-items: center;
 		align-self: center;
-		max-width: 960px;
+		max-width: $container-lg;
 		padding: $spacing-xxl $spacing-xxl;
 	}
 
@@ -154,15 +179,11 @@ main {
 		letter-spacing: $letter-spacing-tight;
 		text-transform: uppercase;
 		text-align: center;
-		border-radius: $border-radius-lg;
-		border: 3px solid $color-black;
-		padding: $spacing-lg $spacing-xxxl;
 		justify-self: center;
 	}
 }
 
 .heading-container--sm {
-	text-align: center;
 	justify-content: center;
 	padding: $spacing-md;
 
